--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- import CSS -->
 
-    <title>custom_diet</title>
+    <title>Weight Loss Year | Lose some Weight, Gain a Lifestyle</title>
   </head>
   <body>
     <noscript>
